# basal-reverse-engineering

./: .gitignore  README.md  cli.py  formatters.py  models.py  nightscout.py  pyproject.toml  requirements.txt
.claude/skills/nightscout/: SKILL.md
.claude/skills/slidedeck/: SKILL.md
scripts/: insulin_totals.py
slidedeck/: client.html  server.py
src/nightscout/: __init__.py  __main__.py  api.py  formatters.py
src/slidedeck/: __main__.py  client.html  terminal.py  web.py
