[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nightscout-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pymongo",
    "python-dotenv",
    "requests",
    "matplotlib",
    "fastmcp",
    "aiohttp",
]

[project.scripts]
ns-day = "nightscout.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
